# ai-book

./: .gitignore  404.html  README.md  agent_sdk_doc.md  index.html  sitemap.xml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.0c10d4c1.css  styles.58da7b20.css
assets/js/: 01a85c17.eb283d12.js  068768ed.d9a90d27.js  074fb30c.bb8ac81b.js  0c6c7a9d.30b5bfee.js  0d8e4129.aea8e509.js  0de43da9.cc519997.js  0e384e19.048d29d3.js  1651d183.640ccdaf.js  17896441.a74704d0.js  18c41134.01cedd59.js  1e4232ab.4a59233a.js  1f391b9e.617a8bdc.js  221a8915.92203d11.js  2237.55a1cbcf.js  309d8cf4.cdf01c64.js  33fc5bb8.fd04fe0a.js  35353fbf.4e5e7b73.js  36994c47.70b69ab0.js  393be207.ee83b05a.js  3cdac0ba.228fcb4a.js  3df11b60.8bcd2640.js  428daee4.9cd61b40.js  439b7c5a.7e34b4df.js  4d4efb6e.f40f7c6e.js  5159.b7e53984.js  517b03ff.f3208e38.js  533a09ca.70ea621d.js  57077635.a781ec0f.js  (+57 more)
backend/: .env.example  README.md  agent.py  api.py  clear_qdrant.py  config.py  crawler.py  diagnose_crawl.py  embedder.py  final_test.py  gemini_agent.py  main.py  mistral_rag_agent.py  models.py  pyproject.toml  requirements.txt  retrieval_tool.py  retrieve.py  simple_rag_api.py  storage.py  test_api.py  test_collections.py  test_context_restricted.py  test_e2e.py  test_extended.py  test_gemini.py  test_gemini_agent.py  test_mistral_agent.py  test_rag_agent.py  test_retrieval.py  test_validation.py  utils.py
blog/: atom.xml  index.html  rss.xml
frontend-docu/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
markdown-page/: index.html
(+177 files in other folders)
